shared-business-logics/services/ai-services/Backend/Java/customer-experience-engagement/ai-customer-engagement-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-customer-engagement-service
  namespace: ai-services
  labels:
    app: ai-customer-engagement-service
    team: team-f-ai-services
spec:
  type: ClusterIP
  selector:
    app: ai-customer-engagement-service
  ports:
  - name: http
    port: 8231
    targetPort: 8231
    protocol: TCP
